# feishu-bot

./: .env.example  .gitignore  00_initializer.md  01_coding.md  CLAUDE.md  README.md  claude-progress.txt  feature_list.json  init.sh  pyproject.toml  roadmap.md
app/: main.py
app/backends/: base.py  dify.py  dify_inputs.py
app/core/: dedup.py  gateway.py  models.py  session.py
app/services/: dify_files.py  feishu_files.py  file_parser.py  public_files.py
tests/: conftest.py
tests/integration/: test_feishu_webhook.py  test_health.py
tests/unit/: test_abstract_interfaces.py  test_deduplication_store.py  test_dify_backend.py  test_dify_file_upload_service.py  test_feishu_adapter.py  test_feishu_file_service.py  test_file_parser_service.py  test_gateway.py  test_models.py  test_public_file_service.py  test_session_store.py
